# agenticrag

./: .gitignore  CICD_SETUP.md  DEPLOYMENT_COMMANDS.md  DEVOPS_PORTFOLIO.md  Dockerfile  LEARNING_PATH.md  QUICKSTART.md  README.md  agentic_rag.py  api_server.py  complete_rag.py  main.py  main_fast.py  pyproject.toml  rag_system.py  test_api.py  tmpclaude-15a1-cwd  upload_pdf.py
.github/workflows/: deploy.yml
k8s/: config.yml  deployment.yml  namespace.yml  secrets.yml  service.yml  setup-eks.sh  tmpclaude-8bfd-cwd
terraform/: .gitignore  README.md  main.tf  outputs.tf  setup.sh  terraform.tfvars.example  variables.tf
terraform/modules/eks/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
